28/3/2006:	v3.2.17
	- added new 'welcome' screen

27/3/2006:	v3.2.16
	- translations updated

13/3/2006:	v3.2.15
	- added NLD & SLES themes

6/3/2006:	v3.2.14
	- new theme, cont.
	- it's now nolapic (#155280)
	- translations updated

28/2/2006:	v3.2.13
	- drop dosemu as testing platform
	- new theme, first try

21/2/2006:	v3.2.12
	- add noapic boot option (#150030)

14/2/2006:	v3.2.11
	- add apic boot option (#150030)

9/2/2006:	v3.2.10
	- more defensive monitor detection (#149578)
	- monitor detection can be skipped

26/1/2006:	v3.2.9
	- go for 8 bit framebuffer if there are no 16 bit modes (#144742)

23/1/2006:	v3.2.8
	- better monitor detection
	- cjwatson@ubuntu.com: support big-endian cpio archives (#140119)
	- support direct driverupdate loading from CD-ROM (feat #152)
	- add new languages

16/1/2006:	v3.2.7
	- show all options in grub/lilo (#136377)
	- translations & font updated

14/12/2005:	v3.2.6
	- fixed to work correctly with grub & lilo

5/12/2005:	v3.2.5
	- Colin Watson <cjwatson@ubuntu.com>: build fixes for x86-64
	- fixed kernel splash loading
	- include 'unpack_bootlogo' script in package

30/11/2005:	v3.2.4
	- adjust to syslinux 3.11
	- remove some primary words and reimplement them as bytecode
	- read config options from 'gfxboot.cfg'

19/10/2005:	v3.2.3
	- offer Croatian

12/10/2005:	v3.2.2
	- do only aligned dword reads from video memory - some ATI boards
	  need this (#114804)

6/10/2005:	v3.2.1
	- needs syslinux with updated gfx patch
	- texts updated for 10.1
	- implemented filesize, getcwd, chdir commands
	- using new cd layout

15/9/2005:	v3.2.0
	- better testing script
	- gcc 4.1 compile fixes

9/9/2005:	v3.1.8
	- oops, was already December

5/9/2005:	v3.1.7
	- Finnish texts updated

31/8/2005:	v3.1.6
	- fix color handling bug (#72232)
	- show penguins a bit more often

29/8/2005:	v3.1.5
	- added more keymaps (#113265)
	- long menus are wrapped
	- added 640x480 fallback for i845-like boards
	- new translations

24/8/2005:	v3.1.4