@@ -1,3 +1,6 @@
+29/3/2006:	v3.2.18
+	- better 'welcome' screen
+
 28/3/2006:	v3.2.17
 	- added new 'welcome' screen
 
